--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,4 +16,4 @@ promotions:
   - name: Dockerize
     pipeline_file: pipeline_2.yml
     auto_promote:
-      when: branch = 'master' AND
+      when: branch = 'master'
