--- a/.semaphore/pipeline_3.yml
+++ b/.semaphore/pipeline_3.yml
@@ -20,6 +20,9 @@ blocks:
       secrets:
         - name: do-k8s
         - name: dockerhub
+      env_vars:
+        - name: KUBECONFIG
+          value: /home/semaphore/.kube/dok8s.yaml
   - name: Tag latest release
     task:
       secrets:
