--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,8 +4,11 @@ metadata:
   name: smstore-partner-site
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    certmanager.k8s.io/acme-challenge-type: dns01
+    certmanager.k8s.io/acme-dns01-provider: cloudflare
+    ingress.kubernetes.io/force-ssl-redirect: "true"
+    ingress.kubernetes.io/ssl-redirect: "true" 
 spec:
   tls:
   - hosts:
@@ -18,3 +21,4 @@ spec:
       - backend:
           serviceName: smstore-partner-site
           servicePort: 80
+        path: /
