--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "apollo-boost": "^0.4.9",
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
@@ -22,6 +23,7 @@
     "graphql-tag": "^2.12.5",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
+    "lightgallery.js": "^1.4.0",
     "moment-duration-format": "^2.3.2",
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
@@ -30,6 +32,8 @@
     "vue-axios": "^3.2.5",
     "vue-lazyload": "^1.3.3",
     "vue-ls": "^3.2.2",
+    "vue-picture-swipe": "^2.1.0",
+    "vue-slim-tabs": "^0.4.0",
     "vue2-filters": "^0.13.0",
     "vuex-class": "^0.3.2"
   },
