--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt": "^2.15.7",
     "nuxt-property-decorator": "^2.9.1",
     "query-string": "^7.0.1",
+    "slugify": "^1.6.0",
     "vue-apollo": "^3.0.7",
     "vue-axios": "^3.2.5",
     "vue-lazyload": "^1.3.3",
