--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -18,7 +18,8 @@ spec:
   - host: "*.tiemcuatui.com"
     http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: smstore-partner-site
           servicePort: 80
-        path: /
+        
