--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-link-ws": "^1.0.20",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
+    "crypto": "^1.0.1",
     "daisyui": "^1.14.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
@@ -29,12 +30,17 @@
     "nuxt-property-decorator": "^2.9.1",
     "query-string": "^7.0.1",
     "slugify": "^1.6.0",
+    "vee-validate": "^3.4.13",
     "vue-apollo": "^3.0.7",
     "vue-axios": "^3.2.5",
+    "vue-infinite-loading": "^2.4.5",
     "vue-lazyload": "^1.3.3",
+    "vue-lottie": "^0.2.1",
     "vue-ls": "^3.2.2",
+    "vue-notification": "^1.3.20",
     "vue-picture-swipe": "^2.1.0",
     "vue-slim-tabs": "^0.4.0",
+    "vue-social-sharing": "^3.0.8",
     "vue2-filters": "^0.13.0",
     "vuex-class": "^0.3.2"
   },
