--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "apollo-boost": "^0.4.9",
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
+    "buefy": "^0.9.11",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "crypto": "^1.0.1",
-    "daisyui": "^1.14.7",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
     "isomorphic-fetch": "^3.0.0",
